--- a/assets/css/sale.css
+++ b/assets/css/sale.css
@@ -22,6 +22,7 @@
 
 .price .original {
   text-decoration: line-through;
+  font-weight: 500;
 }
 
 .price .discounted {
